<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="unknown">Unknown</string>

    <!-- screen captions -->
    <string name="app_name">Mapzen POI Collector</string>
    <string name="poi_info_screen_caption">View POI info</string>
    <string name="edit_poi_screen_caption">Edit POI info</string>
    <string name="select_category_screen_caption">Select POI Category</string>
    <string name="select_sub_type_screen_caption">Select POI Type</string>


    <!-- menu items -->
    <string name="my_location">My location</string>
    <string name="add_poi">Add POI</string>
    <string name="more_menu_item">More</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="edit_poi_menu_item">Edit POI</string>

    <!-- OsmLogin screen -->
    <string name="button_osm_login">Login to OpenStreetMap</string>
    <string name="osm_login_page_text1">Welcome to Mapzen POI Collector</string>
    <string name="osm_login_page_text2">
        Mapzen POI Collector lets you add places of interest (POIs) to
        OpenStreetMap - the revolutionary community project that is creating
        the world\'s most complete, most up to date map.
    </string>
    <string name="osm_login_page_text3">
        Using Mapzen POI Collector requires active OpenStreetMap Account
    </string>
    <string name="osm_login_page_text4">If you don\'t have an account you can</string>
    <string name="osm_login_page_text5">register at OpenStreetMap.org</string>
    <string name="loading">Loading...</string>

    <!-- Notification messages -->
    <string name="message_gpsdisabled">GPS is disabled. Trying to use wireless network to determine your location...</string>
    <string name="message_locationunavailable">GPS and Network detection is disabled. Your current location is temporarily unavailable...</string>
    <string name="message_lastknownlocation">GPS and Network detection is disabled. Showing last known location...</string>

    <string name="copyright_message">&#169; 2011 Openstreetmap.org &amp; contributors. CC-by-SA</string>
    <string name="about_message">This software uses map data provided by &lt;b&gt;OpenStreetMap.org&lt;/b&gt;</string>
    <string name="crash_toast_text">Mapzen POI Collector crashed, but a report has been sent to CloudMade team to help them fix the issue</string>

    <!-- Main screen -->
    <string name="message_will_hide">This message will hide automatically</string>
    <string name="calloutCaptionDefault">Place Info</string>
    <string name="calloutCaptionNewPoi">Press &amp; drag to move</string>
    <string name="loading_pois">Loading POIs</string>
    <string name="zoom_in_to_add_poi">Zoom in to Add POI</string>

    <!-- "View POI Details" screen -->
    <string name="place_of_interest_type">Type of Place Of Interest</string>
    <string name="address_information">Address Information</string>
    <string name="type">Type</string>
    <string name="sub_type">Sub-type</string>
    <string name="street">Street</string>
    <string name="housenumber">Housenumber</string>
    <string name="website">Website</string>
    <string name="contacts">Contacts</string>
    <string name="phone_number">Phone</string>
    <string name="opening_hours">Opening Hours</string>
    <string name="description">Description</string>
    <string name="not_editable_message">Sorry you can\'t move or edit this type of POI. We plan to add support for editing all POI types in late version of Mapzen POI Collector.</string>
    <string name="lookup_poi_in_osm">Lookup in OSM</string>

    <!-- "Edit POI Details" screen -->
    <string name="name_caption">Name</string>
    <string name="saving_poi">To undo, press \"Cancel\" button</string>
    <string name="saving">Saving...</string>
    <string name="poi_was_moved">Place moved</string>

    <!-- Unsaved POI Dialog on "Edit POI Details" screen -->
    <string name="dialog_poi_unsaved">POI wasn\'t saved</string>
    <string name="dialog_poi_unsaved_message">Do you want to save it?</string>

    <!-- menu items -->
    <string name="delete_poi_menu_item_caption">Delete</string>
    <string name="save_poi_menu_item_caption">Save</string>
    <string name="cancel_poi_menu_item_caption">Cancel</string>
    <string name="add_name">Add place name</string>
    <string name="select_place_type">Select place type</string>
    <string name="add_address_info">Add address info</string>
    <string name="add_website">Add website</string>
    <string name="add_phone">Add phone number</string>
    <string name="add_opening_hours">Add opening hours</string>
    <string name="add_description">Add description</string>
    <string name="dialog_cancel_button">Cancel</string>
    <string name="opening_hours_hint">7/24 or Mo-Fr 08:30-20:00</string>
    <string name="poi_is_invalid">Unable to save a POI without type. Please select type and then try again.</string>
    <string name="download_osm_data">Load POIs</string>

    <!-- "About" dialog -->
    <string name="places_added_edited_deleted">Added / Edited / Deleted:</string>
    <string name="dialog_copyright_message">Map Data &#169; 2011 OpenStreetMap.org Contributors. Licensed under the terms of the Creative Commons Attribution Share Alike 2.0 License.</string>
    <string name="dialog_feedback_request_message">Got something to say about Mapzen POI Collector? We want to hear from you! mapzen@cloudmade.com</string>
    <string name="dialog_ok_button">OK</string>
    <string name="dialog_view_license_button">View License</string>

    <string name="dialog_err_ms_no_osm_connection_title">OSM Authentication Failure</string>
    <string name="dialog_err_msg_no_osm_connection">Sorry, Mapzen POI Collector can\'t access OpenStreetMap to log you into your account. Please check your phone has 3G turned on or you are using a WiFi hotspot. If you still can\'t access OpenStreetMap please try a little later. If the problem persists, email support@cloudmade.com</string>
    <string name="dialog_check_network_settings">Check settings</string>

    <!-- PreferenceActivity -->
    <string name="preferences_user_statistics">Statistics</string>
    <string name="preferences_tiles_cache">Data &amp; cache</string>
    <string name="clear_map_tiles_cache">Remove map tiles cache</string>
    <string name="current_cache_size">Current cache size</string>
    <string name="removing_cache">Removing map tiles cache...</string>
    <string name="failed_to_remove_cache">Failed to remove cache. Some files aren\'t deleted</string>
    <string name="osm_data_download_method">Data download</string>
    <string name="osm_data_download_automatic">POIs will be loaded automatically when moving the map</string>
    <string name="osm_data_download_manual">POIs will be loaded manually, using "Menu -> Load POIs" </string>
</resources>
