<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!--   <PreferenceCategory
          android:title="@string/preferences_user_statistics">
          <Preference android:key="nodes_created" android:title="@string/places_added_edited_deleted"
              android:summary="10 / 20 / 30">
          </Preference>
      </PreferenceCategory> -->
    <PreferenceCategory android:title="@string/preferences_tiles_cache">
        <Preference
            android:key="clear_map_tiles_cache"
            android:persistent="false"
            android:summary="@string/current_cache_size"
            android:title="@string/clear_map_tiles_cache"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="automatic_osm_data_download"
            android:persistent="true"
            android:summaryOff="@string/osm_data_download_manual"
            android:summaryOn="@string/osm_data_download_automatic"
            android:title="@string/osm_data_download_method"/>
    </PreferenceCategory>
</PreferenceScreen>
