<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/my_location"
        android:icon="@drawable/ic_menu_mylocation"
        android:title="@string/my_location" />
    <item
        android:id="@+id/add_poi"
        android:icon="@drawable/ic_menu_add"
        android:title="@string/add_poi" />
    <item
        android:id="@+id/more_menu_item_id"
        android:icon="@drawable/ic_menu_more"
        android:title="@string/more_menu_item">
        <menu>
            <item
                android:id="@+id/settings_menu_item_id"
                android:icon="@drawable/ic_menu_preferences"
                android:title="@string/settings" />
            <item
                android:id="@+id/about_application"
                android:icon="@drawable/ic_menu_info_details"
                android:title="@string/about" />
        </menu>
    </item>
</menu>
