<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="fill_parent" 
	android:layout_width="fill_parent"
	android:fillViewport="true"
	android:background="@drawable/gradient_background">
	<RelativeLayout android:layout_height="wrap_content" android:id="@+id/login_screen_layout" android:layout_width="fill_parent">
		<ImageView android:layout_margin="5dip" android:id="@+id/mapzen_logo" android:src="@drawable/mapzen_logo_big" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_centerHorizontal="true"></ImageView>
		<TextView android:textColor="#000000" android:layout_marginLeft="10dip" android:layout_marginBottom="20dip" android:textSize="18sp" android:gravity="center_horizontal" android:textStyle="bold" android:id="@+id/osm_login_page_text1" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_below="@+id/mapzen_logo" android:text="@string/osm_login_page_text1" android:layout_centerHorizontal="true"></TextView>
		<TextView android:textColor="#000000" android:layout_marginLeft="10dip" android:layout_marginBottom="10dip" android:linksClickable="true" android:textSize="16sp" android:gravity="fill" android:id="@+id/osm_login_page_text2" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_below="@+id/osm_login_page_text1" android:text="@string/osm_login_page_text2" android:layout_centerHorizontal="true"></TextView>
		<TextView android:textColor="#000000" android:layout_marginLeft="10dip" android:layout_marginBottom="10dip" android:textSize="16sp" android:gravity="fill" android:id="@+id/osm_login_page_text3" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_below="@+id/osm_login_page_text2" android:text="@string/osm_login_page_text3" android:layout_centerHorizontal="true"></TextView>
		<Button android:text="@string/button_osm_login" android:layout_marginLeft="10dip" android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/button_osm_login" android:layout_below="@+id/osm_login_page_text3" android:layout_centerHorizontal="true" android:textSize="16sp"></Button>
		<TextView android:textColor="#000000" android:layout_marginLeft="10dip" android:textSize="16sp" android:layout_marginTop="10dip" android:id="@+id/osm_login_page_text4" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_below="@+id/button_osm_login" android:text="@string/osm_login_page_text4" android:layout_centerHorizontal="true"></TextView>
		<TextView android:textColor="#3366FF" android:layout_marginLeft="10dip" android:layout_marginBottom="10dip" android:clickable="true" android:textSize="16sp" android:id="@+id/osm_login_page_text5" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_below="@+id/osm_login_page_text4" android:text="@string/osm_login_page_text5" android:layout_centerHorizontal="true"></TextView>
		<TextView android:layout_alignParentBottom="true" android:textColor="#000000" android:layout_marginBottom="10dip" android:textSize="8sp" android:gravity="center_horizontal" android:id="@+id/copyright_message" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_below="@id/osm_login_page_text5" android:text="@string/copyright_message"></TextView>
	</RelativeLayout>

</ScrollView>