<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/about_dialog_layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dip">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/places_added_edited_deleted" />

        <TextView
            android:id="@+id/placed_added_edited_deleted_value_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            tools:text="0/0/0" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_margin="5dip"
            android:background="?android:attr/listDivider" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_copyright_message"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_feedback_request_message"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>
</ScrollView>
